<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/product_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:adjustViewBounds="true"
            android:maxWidth="400dp"
            android:maxHeight="400dp"
            android:src="@drawable/add_product_img" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    style="@style/info_fields"
                    android:text="@string/product_name" />

                <TextView
                    android:id="@+id/quantity"
                    style="@style/info_fields"
                    android:text="@string/product_quantity" />

                <TextView
                    android:id="@+id/price"
                    style="@style/info_fields"
                    android:text="@string/product_price" />

                <TextView
                    android:id="@+id/supplier"
                    style="@style/info_fields"
                    android:text="@string/product_supplier" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/product_name"
                    style="@style/product_edit_text_fields"
                    android:hint="@string/product_name_hint" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/decrease_by_one"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/decrease_quantity" />

                    <EditText
                        android:id="@+id/product_quantity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/product_quantity_hint"
                        android:inputType="number"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/increase_by_one"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/increase_quantity" />
                </LinearLayout>

                <EditText
                    android:id="@+id/product_price"
                    style="@style/product_edit_text_fields"
                    android:hint="@string/product_price_hint"
                    android:inputType="number" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <!-- Gender drop-down spinner -->
                    <Spinner
                        android:id="@+id/spinner_supplier"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:paddingRight="16dp"
                        android:spinnerMode="dropdown" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/make_order" />
    </LinearLayout>
</ScrollView>
